u00261
    Blocking waiting for file lock on build directory
    Checking api-gateway v0.1.1 (/Users/chanthawat/Developments/gridtokenx-platform/gridtokenx-apigateway)
error[E0423]: expected function, found module `rand::rng`
  --> src/auth/password.rs:91:23
   |
91 |         let mut rng = rand::rng();
   |                       ^^^^^^^^^ not a function

error[E0423]: expected function, found module `rand::rng`
  --> src/services/token_service.rs:13:23
   |
13 |         let mut rng = rand::rng();
   |                       ^^^^^^^^^ not a function

error[E0423]: expected function, found module `rand::rng`
  --> src/services/token_service.rs:49:23
   |
49 |         let mut rng = rand::rng();
   |                       ^^^^^^^^^ not a function

error[E0603]: module `rng` is private
  --> src/auth/password.rs:91:29
   |
91 |         let mut rng = rand::rng();
   |                             ^^^ private module
   |
note: the module `rng` is defined here
  --> /Users/chanthawat/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/rand-0.8.5/src/lib.rs:99:1
   |
99 | mod rng;
   | ^^^^^^^

error[E0603]: module `rng` is private
  --> src/services/token_service.rs:13:29
   |
13 |         let mut rng = rand::rng();
   |                             ^^^ private module
   |
note: the module `rng` is defined here
  --> /Users/chanthawat/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/rand-0.8.5/src/lib.rs:99:1
   |
99 | mod rng;
   | ^^^^^^^

error[E0603]: module `rng` is private
  --> src/services/token_service.rs:49:29
   |
49 |         let mut rng = rand::rng();
   |                             ^^^ private module
   |
note: the module `rng` is defined here
  --> /Users/chanthawat/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/rand-0.8.5/src/lib.rs:99:1
   |
99 | mod rng;
   | ^^^^^^^

warning: unused import: `rand::Rng`
  --> src/auth/password.rs:89:13
   |
89 |         use rand::Rng;
   |             ^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::str::FromStr`
 --> src/error.rs:8:5
  |
8 | use std::str::FromStr;
  |     ^^^^^^^^^^^^^^^^^

warning: unused import: `std::sync::Arc`
 --> src/handlers/dashboard.rs:4:5
  |
4 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: unused import: `solana_sdk::signer::Signer`
  --> src/handlers/energy_trading.rs:20:5
   |
20 | use solana_sdk::signer::Signer;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `Query`
 --> src/handlers/meter_registration.rs:2:21
  |
2 |     extract::{Path, Query, State},
  |                     ^^^^^

warning: unused import: `Query`
 --> src/handlers/swap.rs:8:15
  |
8 |     extract::{Query, State},
  |               ^^^^^

warning: unused import: `crate::services::meter_verification_service::MeterRegistry`
   --> src/handlers/user_management.rs:890:5
    |
890 | use crate::services::meter_verification_service::MeterRegistry;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::str::FromStr`
  --> src/models/energy.rs:37:13
   |
37 |         use std::str::FromStr;
   |             ^^^^^^^^^^^^^^^^^

warning: unused import: `error`
 --> src/services/amm_service.rs:7:15
  |
7 | use tracing::{error, info, instrument};
  |               ^^^^^

warning: unused import: `std::str::FromStr`
   --> src/services/erc_service.rs:445:13
    |
445 |         use std::str::FromStr;
    |             ^^^^^^^^^^^^^^^^^

warning: unused import: `EncodedConfirmedTransactionWithStatusMeta`
 --> src/services/event_processor_service.rs:5:33
  |
5 | use solana_transaction_status::{EncodedConfirmedTransactionWithStatusMeta, UiTransactionEncoding};
  |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::str::FromStr`
  --> src/services/market_clearing.rs:10:5
   |
10 | use std::str::FromStr;
   |     ^^^^^^^^^^^^^^^^^

warning: unused import: `std::str::FromStr`
  --> src/services/meter_service.rs:73:13
   |
73 |         use std::str::FromStr;
   |             ^^^^^^^^^^^^^^^^^

warning: unused import: `std::str::FromStr`
   --> src/services/meter_service.rs:627:13
    |
627 |         use std::str::FromStr;
    |             ^^^^^^^^^^^^^^^^^

warning: unused import: `Duration`
 --> src/services/meter_verification_service.rs:3:24
  |
3 | use chrono::{DateTime, Duration, Utc};
  |                        ^^^^^^^^

warning: unused import: `anyhow::anyhow`
 --> src/services/order_matching_engine.rs:2:5
  |
2 | use anyhow::anyhow;
  |     ^^^^^^^^^^^^^^

warning: unused import: `std::str::FromStr`
 --> src/services/order_matching_engine.rs:7:5
  |
7 | use std::str::FromStr;
  |     ^^^^^^^^^^^^^^^^^

error[E0599]: no method named `unwrap_or` found for type `bool` in the current scope
   --> src/handlers/meter_registration.rs:105:36
    |
105 |     if !user_record.email_verified.unwrap_or(false) {
    |                                    ^^^^^^^^^ method not found in `bool`

error[E0599]: no function or associated item named `digest` found for struct `CoreWrapper<T>` in the current scope
   --> src/handlers/meter_registration.rs:156:56
    |
156 |     let meter_key_hash = format!("{:x}", sha2::Sha256::digest(&public_key_bytes));
    |                                                        ^^^^^^ function or associated item not found in `CoreWrapper<CtVariableCoreWrapper<Sha256VarCore, UInt<..., ...>, ...>>`
    |
note: if you're trying to build a new `CoreWrapper<CtVariableCoreWrapper<Sha256VarCore, hmac::digest::typenum::UInt<hmac::digest::typenum::UInt<hmac::digest::typenum::UInt<hmac::digest::typenum::UInt<hmac::digest::typenum::UInt<hmac::digest::typenum::UInt<UTerm, B1>, B0>, B0>, B0>, B0>, B0>, OidSha256>>`, consider using `CoreWrapper::<T>::from_core` which returns `CoreWrapper<_>`
   --> /Users/chanthawat/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/digest-0.10.7/src/core_api/wrapper.rs:70:5
    |
 70 |     pub fn from_core(core: T) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = help: items from traits can only be used if the trait is in scope
    = note: the full name for the type has been written to '/Users/chanthawat/Developments/gridtokenx-platform/gridtokenx-apigateway/target/debug/deps/api_gateway-c1c96ae4687f7b49.long-type-14836822259825332248.txt'
    = note: consider using `--verbose` to print the full type name to the console
help: trait `Digest` which provides `digest` is implemented but not in scope; perhaps you want to import it
    |
  1 + use sha2::Digest;
    |

error[E0599]: no method named `as_deref` found for struct `std::string::String` in the current scope
   --> src/handlers/meters.rs:257:42
    |
257 |             if meter.verification_status.as_deref() != Some("verified") {
    |                                          ^^^^^^^^
    |
help: there is a method `as_ref` with a similar name
    |
257 -             if meter.verification_status.as_deref() != Some("verified") {
257 +             if meter.verification_status.as_ref() != Some("verified") {
    |

Some errors have detailed explanations: E0423, E0599, E0603.
For more information about an error, try `rustc --explain E0423`.
warning: `api-gateway` (lib) generated 17 warnings
error: could not compile `api-gateway` (lib) due to 9 previous errors; 17 warnings emitted
